[package]
name = "back-blog-tcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
serde_json = "1.0.114"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.rocket]
version = "0.5.0"
features = [
    "uuid",
    "json"
]
